--- a/index.html
+++ b/index.html
@@ -17,15 +17,16 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Homepage</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=443350757"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=219350998" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4099751814" id="pagesheet"/>
    </head>
  <body>
 
-  <div class="clearfix borderbox" id="page"><!-- column -->
-   <div class="clearfix colelem" id="u94-4"><!-- content -->
-    <p><span id="u94">TESTWEBSIDE</span></p>
+  <div class="rounded-corners clearfix borderbox" id="page"><!-- group -->
+   <div class="clip_frame grpelem" id="u385"><!-- image -->
+    <img class="block" id="u385_img" src="images/space_flight_sky_stars_82970_1920x1080-crop-u385.jpg?crc=411733157" alt="" data-image-width="1080" data-image-height="720"/>
    </div>
-   <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="320" data-content-below-spacer="180"></div>
+   <a class="nonblock nontext clearfix grpelem" id="u418-4" href="http://steamcommunity.com/id/FaveGHG/"><!-- content --><p><span id="u418">ThatFave</span></p></a>
+   <div class="verticalspacer" data-offset-top="714" data-content-above-spacer="714" data-content-below-spacer="62"></div>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
