--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <link rel="stylesheet" type="text/css" href="css/index.css?crc=172061797" id="pagesheet"/>
    </head>
  <body>
-
+		   {width: 100%;
+			height: 100%;
+			margin: 0px;
+			padding: 0px;
+			overflow-x: hidden; }
   <div class="clearfix" id="page"><!-- group -->
    <div class="clip_frame clearfix grpelem" id="u97"><!-- image -->
     <img class="position_content" id="u97_img" src="images/space_flight_sky_stars_82970_1920x1080.jpg?crc=4268243166" alt="" width="2120" height="1192"/>
@@ -51,10 +55,6 @@ Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
   <!-- RequireJS script -->
   <script src="scripts/require.js?crc=85721165" type="text/javascript" async data-main="scripts/museconfig.js?crc=4273287925" onload="if (requirejs) requirejs.onError = function(requireType, requireModule) { if (requireType && requireType.toString && requireType.toString().indexOf && 0 <= requireType.toString().indexOf('#scripterror')) window.Muse.assets.check(); }" onerror="window.Muse.assets.check();">
   </script>
-		   width: 100%;
-			height: 100%;
-			margin: 0px;
-			padding: 0px;
-			overflow-x: hidden; 
+
    </body>
 </html>
