--- a/index.html
+++ b/index.html
@@ -18,12 +18,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=443350757"/>
   <link rel="stylesheet" type="text/css" href="css/index.css?crc=172061797" id="pagesheet"/>
    </head>
- <body>
-		   {width: 100%;
-			height: 100%;
-			margin: 0px;
-			padding: 0px;
-			overflow-x: hidden; }
+ <body width: 100%; height: 100%; margin: 0px; padding: 0px; overflow-x: hidden;>
+		 
   <div class="clearfix" id="page"><!-- group -->
    <div class="clip_frame clearfix grpelem" id="u97"><!-- image -->
     <img class="position_content" id="u97_img" src="images/space_flight_sky_stars_82970_1920x1080.jpg?crc=4268243166" alt="" width="2120" height="1192"/>
