--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 	<body>
 	
 		<h1>dies ist ein test</h1>
-		<p>test 2</p>
-		<p>Test 3</p>
+		<a href="http://steamcommunity.com/id/FaveGHG/"/>">ThatFave</a>
 		
 	</body>
 	
