--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<body>
 	
 		<h1>dies ist ein test</h1>
-		<a href="http://steamcommunity.com/id/FaveGHG/" />">ThatFave</a>
+		<a href="http://steamcommunity.com/id/FaveGHG/" />ThatFave</a>
 		
 	</body>
 	
