--- a/index.html
+++ b/index.html
@@ -1,17 +1,42 @@
 <!DOCTYPE html>
 <html>
 	<head>
-
-		<title>Homepage</title>
-
+		<title>My website</title>
+		<link rel="stylesheet" type="text/css" href="style.css" />
 	</head>
-	
-	
 	<body>
-	
-		<h1>dies ist ein test</h1>
-		<a href="http://steamcommunity.com/id/FaveGHG/" />ThatFave</a>
+		<div id="container">
+			<div id="header">
+				<h1>My website</h1>
+			</div>
+   
+			<div id="content">
+				<div id="nav">
+					<h2>Navigation</h2>
+					<ul>
+						<li><a class="selected" href="">Home</a></li>
+						<li><a href="">About</a></li>
+						<li><a href="">Contact</a></li>
+					</ul>
+				</div>
+    
+				<div id="main">
+					<h2>Home page</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				</div>
+  
+			</div>
+			<div id="footer">
+				Copyright &copy; 2016 Michael Hesemann
+			</div>
+		</div>
 		
+		<script>
+			for (i=0;i<5;i++) {
+				document.write("This is interation " + i + "<br>");
+			}			
+		</script>
 	</body>
-	
-</html>
+</html>﻿
