--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ function draw() {
         else {
             lives--;
             if(!lives) {
-                alert("GAME OVER");
+                alert("GAME OVER, u suck kys");
                 document.location.reload();
             }
             else {
