--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 	<body>
 		<div id="container">
 			<div id="header">
-				<h1>My website</h1>
+				<h1>ThatFave</h1>
 			</div>
    
 			<div id="content">
@@ -23,7 +23,9 @@
     
 				<div id="main">
 					<h2>Home page</h2>
-					<p>Man kann mich erreichen unter der E-Mail: hesemann60@gmail.com</p>
+					<p>Man kann mich erreichen unter der E-Mail: hesemann60@gmail.com. <br>
+					Ausserdem auf Steam unter "ThatFave".
+					</p>
 				</div>
   
 			</div>
