--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<body>
 		<div id="container">
 			<div id="header">
-				<h1>My website</h1>
+				<h1>ThatFave</h1>
 			</div>
    
 			<div id="content">
