--- a/csgo.html
+++ b/csgo.html
@@ -23,10 +23,11 @@
 				</div>
     
 				<div id="main">
-					<h2>Home page</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-						<br><br>Dieser Text wurde geschrieben, damit ich schlau wirke.
+					<h2>CS:GO</h2>
+					<p>
+					Hier zu finden ist meine autoexec.cfg
 					</p>
+					<a href="https://drive.google.com/open?id=0Bwu6d9LrF44ccFdoTzVfUGVLRHM">autoexec.cfg</a>
 				</div>
   
 			</div>
@@ -36,4 +37,4 @@
 		</div>
 		
 	</body>
-</html>﻿
+</html>
