--- a/games.html
+++ b/games.html
@@ -18,11 +18,12 @@
 						<li><a href="about.html">About</a></li>
 						<li><a href="contact.html">Contact</a></li>
 						<li><a href="games.html">Game</a></li>
+						<li><a href="csgo.html">CS:GO</a></li>
 					</ul>
 				</div>
     
 				<div id="main">
-					<h2>Home page</h2>
+					<h2>Games</h2>
 					
 					<canvas id="myCanvas" width="480" height="320"></canvas>
 		
