--- a/contact.html
+++ b/contact.html
@@ -18,11 +18,12 @@
 						<li><a href="about.html">About</a></li>
 						<li><a href="contact.html">Contact</a></li>
 						<li><a href="games.html">Game</a></li>
+						<li><a href="csgo.html">CS:GO</a></li>
 					</ul>
 				</div>
     
 				<div id="main">
-					<h2>Home page</h2>
+					<h2>contact</h2>
 					<p>Man kann mich erreichen unter der E-Mail: hesemann60@gmail.com. <br>
 					Ausserdem auf Steam unter "ThatFave".
 					</p>
