--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>ThatFave</title>
 		<link rel="stylesheet" type="text/css" href="style.css" />
+		<script src='https://www.google.com/recaptcha/api.js'></script>
 	</head>
 	<body>
 		<div id="container">
@@ -24,6 +25,7 @@
     
 				<div id="main">
 					<h2>contact</h2>
+					<div class="g-recaptcha" data-sitekey="6LcJbyYUAAAAAIgPwocF1VjnqDUnlsr_8vHe6GHJ"></div>
 					<p>Man kann mich erreichen unter der E-Mail: hesemann60@gmail.com. <br>
 					Ausserdem auf Steam unter "ThatFave".
 					</p>
