--- a/contact.html
+++ b/contact.html
@@ -25,10 +25,11 @@
     
 				<div id="main">
 					<h2>contact</h2>
-					<div class="g-recaptcha" data-sitekey="6LcJbyYUAAAAAIgPwocF1VjnqDUnlsr_8vHe6GHJ"></div>
+					<div class="g-recaptcha" data-sitekey="6LcJbyYUAAAAAIgPwocF1VjnqDUnlsr_8vHe6GHJ">
 					<p>Man kann mich erreichen unter der E-Mail: hesemann60@gmail.com. <br>
 					Ausserdem auf Steam unter "ThatFave".
 					</p>
+					</div>
 				</div>
   
 			</div>
