--- a/contact.html
+++ b/contact.html
@@ -25,11 +25,11 @@
     
 				<div id="main">
 					<h2>contact</h2>
-					<div class="g-recaptcha" data-sitekey="6LcJbyYUAAAAAFFJOa7Gdb9lXquD5uG0cjRWxi_E">
+					
 						<p>Man kann mich erreichen unter der E-Mail: hesemann60@gmail.com. <br>
 							Ausserdem auf Steam unter "ThatFave".
 						</p>
-					</div>
+					<div class="g-recaptcha" data-sitekey="6LcJbyYUAAAAAFFJOa7Gdb9lXquD5uG0cjRWxi_E"></div>
 				</div>
   
 			</div>
