--- a/contact.html
+++ b/contact.html
@@ -26,10 +26,10 @@
 				<div id="main">
 					<h2>contact</h2>
 					
-						<p>Man kann mich erreichen unter der E-Mail: hesemann60@gmail.com. <br>
+						<p><a href="http://www.google.com/recaptcha/mailhide/d?k=01H16QH_QgtU-qjoK-630uCQ==&amp;c=2fV048XTbsjJh0Wmzz7mQCiM4Whcc744q503ieGDVb8=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\x3d01H16QH_QgtU-qjoK-630uCQ\x3d\x3d\x26c\x3d2fV048XTbsjJh0Wmzz7mQCiM4Whcc744q503ieGDVb8\x3d', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="E-Mail Adresse anzeigen">E-Mail</a> <br>
 							Ausserdem auf Steam unter "ThatFave".
 						</p>
-					<div class="g-recaptcha" data-sitekey="6LdWdyYUAAAAALeM14K1Gl9AOLZV-RVUZBU0IhLz"></div>
+					
 				</div>
   
 			</div>
