--- a/DiePenetratoren.html
+++ b/DiePenetratoren.html
@@ -23,11 +23,12 @@
 				</div>
     
 				<div id="main">
-					<h2>CS:GO</h2>
+					<h2>Die Penetratoren</h2>
 					<p>
-					Hier zu finden ist meine autoexec.cfg
+					Das ist das Logo von dem Penetratoren-Clan
 					</p>
-					<a href="https://drive.google.com/open?id=0Bwu6d9LrF44ccFdoTzVfUGVLRHM">autoexec.cfg</a>
+					<a href="https://drive.google.com/open?id=1Tbd7AtQvgWsF2leFIQU5ItEU4ZQOR0A3">Logo</a>
+					<a href=""></a>
 				</div>
   
 			</div>
