--- a/contact.html
+++ b/contact.html
@@ -18,8 +18,8 @@
 						<li><a class="selected" href="index.html">Home</a></li>
 						<li><a href="about.html">About</a></li>
 						<li><a href="contact.html">Contact</a></li>
-						<li><a href="games.html">Game</a></li>
 						<li><a href="csgo.html">CS:GO</a></li>
+						<li><a href="DiePenetratoren.html">Die Penetratoren</a></li>
 					</ul>
 				</div>
     
@@ -34,7 +34,7 @@
   
 			</div>
 			<div id="footer">
-				Copyright &copy; 2017 Michael Hesemann
+				Copyright &copy; 2018 Michael Hesemann
 			</div>
 		</div>
 		
