--- a/DiePenetratoren.html
+++ b/DiePenetratoren.html
@@ -24,10 +24,7 @@
     
 				<div id="main">
 					<h2>Die Penetratoren</h2>
-					<p>
-					Das ist das Logo von dem Penetratoren-Clan
-					</p>
-					<a href="https://drive.google.com/open?id=1Tbd7AtQvgWsF2leFIQU5ItEU4ZQOR0A3">Logo</a>
+					<a href="https://goo.gl/Cb3SqU" onclick="window.open('https://goo.gl/Cb3SqU', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=400');>Das ist das Logo von dem Penetratoren-Clan</a>
 					<a href=""></a>
 				</div>
   
