--- a/csgo.html
+++ b/csgo.html
@@ -22,13 +22,11 @@
 					</ul>
 				</div>
     
-				<div id="main">
+			<div id="main">
 					<h2>CS:GO</h2>
-					<p>
-					Hier zu finden ist meine autoexec.cfg
-					</p>
+					<p>Hier zu finden ist meine autoexec.cfg</p>
 					<a href="https://drive.google.com/open?id=0Bwu6d9LrF44ccFdoTzVfUGVLRHM">autoexec.cfg</a>
-				</div>
+			</div>
   
 			</div>
 			<div id="footer">
