--- a/csgo.html
+++ b/csgo.html
@@ -25,7 +25,7 @@
 			<div id="main">
 					<h2>CS:GO</h2>
 					<p>Hier zu finden ist meine autoexec.cfg</p>
-					<a href="https://drive.google.com/open?id=0Bwu6d9LrF44ccFdoTzVfUGVLRHM">autoexec.cfg</a>
+					<a href="https://goo.gl/E8MfYx">autoexec.cfg</a>
 			</div>
   
 			</div>
