--- a/csgo.html
+++ b/csgo.html
@@ -24,10 +24,9 @@
     
 			<div id="main">
 					<h2>CS:GO</h2>
-					<p>Hier zu finden ist meine autoexec.cfg</p>
-					<a href="https://goo.gl/E8MfYx">autoexec.cfg</a>
+					<p>Hier zu finden ist meine <a href="https://goo.gl/E8MfYx">autoexec.cfg</a></p><br>
+					
 			</div>
-  
 			</div>
 			<div id="footer">
 				Copyright &copy; 2018 Michael Hesemann
