--- a/DiePenetratoren.html
+++ b/DiePenetratoren.html
@@ -25,7 +25,7 @@
 				<div id="main">
 					<h2>Die Penetratoren</h2>
 						<p>
-							<a href="https://goo.gl/Cb3SqU">Logo</a>
+							<a href="https://goo.gl/Cb3SqU">Logo</a><br>
 						</p>
 
 				</div>
