--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
 					<h2>Contact</h2>
 					
 						<p>
-							Ausserdem auf Steam unter "ThatFave".<br>
+							Außerdem auf Steam unter "ThatFave".<br>
 						</p>
 					
 				</div>
