--- a/raids.html
+++ b/raids.html
@@ -3,12 +3,11 @@
 	<head>
 		<title>ThatFave</title>
 		<link rel="stylesheet" type="text/css" href="style.css" />
-		<script src='https://www.google.com/recaptcha/api.js'></script>
 	</head>
 	<body>
 		<div id="container">
 			<div id="header">
-				<h1>ThatFave</h1>
+				<h1>Die Penetratoren</h1>
 			</div>
 
 			<div id="content">
@@ -24,15 +23,16 @@
 				</div>
 
 				<div id="main">
-					<h2>Contact</h2>
-
-						<p>
-							Auf Steam unter "ThatFave".<br>
-						</p>
+					<h2>Rust Raids</h2></br>
+					<form name="contact" netlify>
+							<label>Time <input type="text" name="time" /></label>
+							<label>Online/Offline <input type="text" name="type" /></label>
+							<button type="submit">Submit</button>
+					</form>
+					<script src="raidsub.js"></script>
+					<br><iframe src="text.txt"></iframe><br>
 
 				</div>
-
-			</div>
 			<div id="footer">
 				Copyright &copy; 2018 Michael Hesemann
 			</div>
