--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,10 @@
 					<h2>Contact</h2>
 
 						<p>
-							Auf Steam unter "ThatFave".<br>
+							Auf Steam unter "<a target="_blank" rel="noopener noreferrer" href="https://steamcommunity.com/id/thatfave/">ThatFave</a>"<br>
+							Email:	hesemann60@gmail.com (<a target="_blank" rel="noopener noreferrer" href="https://keys.openpgp.org/search?q=DDF3B7F3F51225C5B3791F09B6706764EE1F9732">gpg</a>)<br>
+									michaelhesemann@waifu.club (<a target="_blank" rel="noopener noreferrer" href="https://keys.openpgp.org/search?q=DDF3B7F3F51225C5B3791F09B6706764EE1F9732">gpg</a>)<br>
+									michael.hesemann@protonmail.com (<a target="_blank" rel="noopener noreferrer" href="https://keys.openpgp.org/search?q=DDF3B7F3F51225C5B3791F09B6706764EE1F9732">gpg</a>)<br>
 						</p>
 
 				</div>
