--- a/games.html
+++ b/games.html
@@ -17,13 +17,27 @@
 						<li><a class="selected" href="index.html">Home</a></li>
 						<li><a href="about.html">About</a></li>
 						<li><a href="contact.html">Contact</a></li>
-						<li><a href="csgo.html">CS:GO</a></li>
+						<li><a href="games.html">Games</a></li>
 					</ul>
 				</div>
     
 			<div id="main">
-					<h2>CS:GO</h2>
-					<p>Hier zu finden ist meine <a href="https://goo.gl/E8MfYx">autoexec.cfg</a></p><br>
+					<h3>Rainbow Six Siege</h3>
+					<h4>Display, sound etc.</h4>
+					<p>144hz, Freesync, 4:3 bei 1920x1080, Nightmode, meißt 80%-ish</p>
+					<h4>Mouse, keyboard</h4>
+					<p>Zowie FK2, Logitech g610 reds</p>
+					<h4>Sens + Keybinds</h4>
+					<p>9/9/100, spiele auf 1x 1:1, mit XFactorAiming=0.016667<br><h5>Keybinds: </h5>
+						<ul>
+							<li>lean left - mouse5</li>
+							<li>lean right - mouse4</li>
+							<li>throw drone - q</li>
+							<li>prone - x</li>
+							<li>walk - ctrl</li>
+						</ul>
+					Natürlich alles auf advanced.
+					</p>
 					
 			</div>
 			</div>
