--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 						<li><a class="selected" href="index.html">Home</a></li>
 						<li><a href="about.html">About</a></li>
 						<li><a href="contact.html">Contact</a></li>
-						<li><a href="csgo.html">CS:GO</a></li>
+						<li><a href="games.html">Games</a></li>
 					</ul>
 				</div>
 
