--- a/contact.html
+++ b/contact.html
@@ -26,10 +26,12 @@
 					<h2>Contact</h2>
 
 						<p>
-							Auf Steam unter "<a target="_blank" rel="noopener noreferrer" href="https://steamcommunity.com/id/thatfave/">ThatFave</a>"<br>
-							Email:	hesemann60@gmail.com (<a target="_blank" rel="noopener noreferrer" href="https://keys.openpgp.org/search?q=DDF3B7F3F51225C5B3791F09B6706764EE1F9732">gpg</a>)<br>
-									michaelhesemann@waifu.club (<a target="_blank" rel="noopener noreferrer" href="https://keys.openpgp.org/search?q=DDF3B7F3F51225C5B3791F09B6706764EE1F9732">gpg</a>)<br>
-									michael.hesemann@protonmail.com (<a target="_blank" rel="noopener noreferrer" href="https://keys.openpgp.org/search?q=DDF3B7F3F51225C5B3791F09B6706764EE1F9732">gpg</a>)<br>
+							Twitter: <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/ThatFave">ThatFave</a><br>
+							Twitch: <a target="_blank" rel="noopener noreferrer" href="https://twitch.tv/thatfave">ThatFave</a><br>
+							Steam: <a target="_blank" rel="noopener noreferrer" href="https://steamcommunity.com/id/thatfave/">ThatFave</a><br>
+							Email:	<a target="_blank" rel="noopener noreferrer" href="mailto:hesemann60@gmail.com">hesemann60@gmail.com</a> (<a target="_blank" rel="noopener noreferrer" href="https://keys.openpgp.org/search?q=DDF3B7F3F51225C5B3791F09B6706764EE1F9732">gpg</a>)<br>
+									<a target="_blank" rel="noopener noreferrer" href="mailto:michaelhesemann@waifu.club">michaelhesemann@waifu.club</a> (<a target="_blank" rel="noopener noreferrer" href="https://keys.openpgp.org/search?q=DDF3B7F3F51225C5B3791F09B6706764EE1F9732">gpg</a>)<br>
+									<a target="_blank" rel="noopener noreferrer" href="mailto:michael.hesemann@protonmail.com">michael.hesemann@protonmail.com</a> (<a target="_blank" rel="noopener noreferrer" href="https://keys.openpgp.org/search?q=DDF3B7F3F51225C5B3791F09B6706764EE1F9732">gpg</a>)<br>
 						</p>
 
 				</div>
