--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     
 				<div id="main">
 					<h2>Home page</h2><br>
+					<img src="me_vibe.jpg" width="300" height="650" style="vertical-align:middle;margin:0px 50px"></img>
 				</div>
   
 			</div>
