--- a/games.html
+++ b/games.html
@@ -26,7 +26,7 @@
 					<h4>Display, sound etc.</h4>
 					<p>144hz, Freesync, 4:3 bei 1920x1080, Nightmode, meißt 80%-ish</p>
 					<h4>Mouse, keyboard</h4>
-					<p>Zowie FK2, Logitech g610 reds</p>
+					<p>Zowie FK2, 400 Dpi, Logitech g610 reds</p>
 					<h4>Sens + Keybinds</h4>
 					<p>9/9/100, spiele auf 1x 1:1, mit XFactorAiming=0.016667<br><h5>Keybinds: </h5>
 						<ul>
