--- a/contact.html
+++ b/contact.html
@@ -30,9 +30,7 @@
 							Twitch: <a target="_blank" rel="noopener noreferrer" href="https://twitch.tv/thatfave">ThatFave</a><br>
 							Steam: <a target="_blank" rel="noopener noreferrer" href="https://steamcommunity.com/id/thatfave/">ThatFave</a><br>
 							Email:<br>	
-									<a target="_blank" rel="noopener noreferrer" href="mailto:hesemann60@gmail.com">hesemann60@gmail.com</a> (<a target="_blank" rel="noopener noreferrer" href="https://keys.openpgp.org/search?q=DDF3B7F3F51225C5B3791F09B6706764EE1F9732">gpg</a>)<br>
-									<a target="_blank" rel="noopener noreferrer" href="mailto:michaelhesemann@waifu.club">michaelhesemann@waifu.club</a> (<a target="_blank" rel="noopener noreferrer" href="https://keys.openpgp.org/search?q=DDF3B7F3F51225C5B3791F09B6706764EE1F9732">gpg</a>)<br>
-									<a target="_blank" rel="noopener noreferrer" href="mailto:michael.hesemann@protonmail.com">michael.hesemann@protonmail.com</a> (<a target="_blank" rel="noopener noreferrer" href="https://keys.openpgp.org/search?q=DDF3B7F3F51225C5B3791F09B6706764EE1F9732">gpg</a>)<br>
+									<a target="_blank" rel="noopener noreferrer" href="mailto:fave@disroot.org">fave@disroot.org</a> (<a target="_blank" rel="noopener noreferrer" href="/pgp.txt">gpg</a>)<br>
 						</p>
 
 				</div>
