--- a/contact.html
+++ b/contact.html
@@ -29,9 +29,9 @@
 							Twitter: <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/ThatFave">ThatFave</a><br>
 							Twitch: <a target="_blank" rel="noopener noreferrer" href="https://twitch.tv/thatfave">ThatFave</a><br>
 							Steam: <a target="_blank" rel="noopener noreferrer" href="https://steamcommunity.com/id/thatfave/">ThatFave</a><br>
-							Email:<br>	
-									<a target="_blank" rel="noopener noreferrer" href="mailto:fave@disroot.org">fave@disroot.org</a> (<a target="_blank" rel="noopener noreferrer" href="/pgp.txt">gpg</a>)<br>
-						</p>
+							Email: <a target="_blank" rel="noopener noreferrer" href="mailto:fave@disroot.org">fave@disroot.org</a> (<a target="_blank" rel="noopener noreferrer" href="/pgp.txt">gpg</a>)<br>
+							<a target="_blank" rel="noopener noreferrer" href="/omg.txt">omg.txt</a> <a target="_blank" rel="noopener noreferrer" href="/pgp-sigs.txt">pgp-sigs.txt</a> <a target="_blank" rel="noopener noreferrer" href="/canary.txt">canary.txt</a>		
+					</p>
 
 				</div>
 
