--- a/games.html
+++ b/games.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>ThatFave</title>
 		<link rel="stylesheet" type="text/css" href="style.css" />
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	</head>
 	<body>
 		<div id="container">
