--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 		<title>ThatFave</title>
 		<link rel="stylesheet" type="text/css" href="style.css" />
 		<script src='https://www.google.com/recaptcha/api.js'></script>
-		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+		<link rel="shortcut icon" href="/favicon.ico" mce_href="/favicon.ico" type="image/x-icon">
 	</head>
 	<body>
 		<div id="container">
