--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,7 @@
 						<li><a href="about.html">About</a></li>
 						<li><a href="contact.html">Contact</a></li>
 						<li><a href="games.html">Games</a></li>
+						<li><a href="school.html">School</a></li>
 					</ul>
 				</div>
 
