--- a/school.html
+++ b/school.html
@@ -24,7 +24,7 @@
 				</div>
     
 				<div id="main">
-					<h2>About</h2>
+					<h2>School</h2>
 					<table style="width:100%">
 						<tr>
 							<th>Firstname</th>
