--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
 <html>
 	<head>
 		<title>ThatFave</title>
-		<link rel="stylesheet" type="text/css" href="style.css" />
+	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="shortcut icon" href="/favicon.ico" mce_href="/favicon.ico" type="image/x-icon">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" href="https://unpkg.com/purecss@2.0.6/build/pure-min.css" integrity="sha384-Uu6IeWbM+gzNVXJcM9XV3SohHtmWE+3VGi496jvgX1jyvDTXfdK+rfZc8C1Aehk5" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://unpkg.com/purecss@2.0.6/build/grids-responsive-min.css">
+		<link rel="stylesheet" href="layouts/side-menu-main/styles.css">
+		<link rel="stylesheet" href="style.css">
+		
 	</head>
 	<body>
 		<div id="container">
@@ -13,18 +19,21 @@
    
 			<div id="content">
 				<div id="nav">
-					<h2>Navigation</h2>
-					<ul>
-						<li><a class="selected" href="index.html">Home</a></li>
-						<li><a href="about.html">About</a></li>
-						<li><a href="contact.html">Contact</a></li>
-						<li><a href="games.html">Games</a></li>
-						<li><a href="school.html">School</a></li>
-					</ul>
+					<h2></h2>
+						<ul class="pure-menu-list">
+							<li class="pure-menu-item menu-item-divided pure-menu-selected">
+								<a href="#" class="pure-menu-link">Home</a>
+							</li>
+
+							<li class="pure-menu-item"><a href="about.html" class="pure-menu-link">About</a></li>
+							<li class="pure-menu-item"><a href="school.html" class="pure-menu-link">School</a></li>
+							<li class="pure-menu-item"><a href="contact.html" class="pure-menu-link">Contact</a></li>
+							<li class="pure-menu-item"><a href="games.html" class="pure-menu-link">Games</a></li>
+						</ul>
 				</div>
     
 				<div id="main">
-					<h2>Home page</h2><br>
+					<h2></h2><br>
 					<img src="me_vibe.jpg" width="300" height="650" style="vertical-align:middle;margin:0px 50px"></img><br><br>
 				</div>
   
@@ -33,5 +42,6 @@
 				Copyright &copy; 2021 Michael Hesemann
 			</div>
 		</div>
+		<script src="js/ui.js"></script>
 	</body>
 </html>﻿
